--- a/conf/data.yml
+++ b/conf/data.yml
@@ -41,8 +41,8 @@ Station(s2):
 Member(m1):
   email: homer@simpson.com
   password: secret
-  firstName: Homer
-  lastName: Simpson
+  firstname: Homer
+  lastname: Simpson
   stations:
     - s1
     - s2
