add get logged user functionality

--- a/conf/data.yml
+++ b/conf/data.yml
@@ -38,6 +38,12 @@ Station(s2):
     - r3
     - r4
 
+Station(s3):
+  stationName: Kinsale
+  latitude: 12.149
+  longitude: -64.994
+  readings:
+
 Member(m1):
   email: homer@simpson.com
   password: secret
