--- a/conf/data.yml
+++ b/conf/data.yml
@@ -2,24 +2,28 @@ Reading(r1):
   code: 800
   temperature: 0.5
   windSpeed: 3.5
+  windDirection: 220
   pressure: 1001
 
 Reading(r2):
   code: 600
   temperature: 6.0
   windSpeed: 2
+  windDirection: 200
   pressure: 1004
 
 Reading(r3):
   code: 700
   temperature: 8.0
   windSpeed: 1
+  windDirection: 90
   pressure: 1002
 
 Reading(r4):
   code: 200
   temperature: 0.5
   windSpeed: 3.5
+  windDirection: 120
   pressure: 999
 
 Station(s1):
@@ -37,12 +41,6 @@ Station(s2):
   readings:
     - r3
     - r4
-
-Station(s3):
-  stationName: Kinsale
-  latitude: 12.149
-  longitude: -64.994
-  readings:
 
 Member(m1):
   email: homer@simpson.com
