--- a/conf/application.conf
+++ b/conf/application.conf
@@ -7,8 +7,8 @@ application.name=WeatherTop
 # Set to dev to enable instant reloading and other development help.
 # Otherwise set to prod.
 
-application.mode=dev
-# %prod.application.mode=prod
+# application.mode=dev
+%prod.application.mode=prod
 
 # Secret key
 # ~~~~~
@@ -85,8 +85,8 @@ date.format=yyyy-MM-dd
 #   - mem : for a transient in memory database (H2 in memory)
 #   - fs  : for a simple file written database (H2 file stored)
 
-db.default=mem
-# db.default=postgres://vkqyblzn:JG7q9AFDGN0m6oqYWKszWi-CrxcVf9W7@tyke.db.elephantsql.com/vkqyblzn
+# db.default=mem
+db.default=postgres://vkqyblzn:JG7q9AFDGN0m6oqYWKszWi-CrxcVf9W7@tyke.db.elephantsql.com/vkqyblzn
 
 #
 # To connect to a local MySQL5 database, use:
@@ -117,8 +117,8 @@ db.default=mem
 # JPA Configuration (Hibernate)
 # ~~~~~
 
-# jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
-# jpa.ddl=update
+jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
+jpa.ddl=update
 
 
 #
