--- a/conf/application.conf
+++ b/conf/application.conf
@@ -86,7 +86,7 @@ date.format=yyyy-MM-dd
 #   - fs  : for a simple file written database (H2 file stored)
 
 # db.default=mem
-db.default=postgres://vkqyblzn:JG7q9AFDGN0m6oqYWKszWi-CrxcVf9W7@tyke.db.elephantsql.com/vkqyblzn
+db.default=postgres://yfuirumm:xNigNGD-G5VeTkAyMVE2bABpRykET6zM@tyke.db.elephantsql.com/yfuirumm
 
 #
 # To connect to a local MySQL5 database, use:
@@ -119,7 +119,6 @@ db.default=postgres://vkqyblzn:JG7q9AFDGN0m6oqYWKszWi-CrxcVf9W7@tyke.db.elephant
 
 jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
 jpa.ddl=update
-
 
 #
 # Specify the custom JPA dialect to use here (default to guess):
