--- a/conf/application.conf
+++ b/conf/application.conf
@@ -8,7 +8,7 @@ application.name=WeatherTop
 # Otherwise set to prod.
 
 # application.mode=dev
-%prod.application.mode=prod
+prod.application.mode=prod
 
 # Secret key
 # ~~~~~
